<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">University Base Converter</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_university_base_dec_to_base">UniversityBaseDecToBaseActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_university_base_base_to_dec">UniversityBaseBaseToDecActivity</string>
    <string name="welcome_message">Welcome to University Base Converter</string>
    <string name="welcome_message_2">(Converting numbers since 2014/03/05)</string>
    <string name="convert_type_decimal">Convert any number type to a decimal</string>
    <string name="value_appears_here">(Value appears here)</string>
    <string name="convert">Convert</string>
    <string name="main_menu">Main Menu</string>
    <string name="result">Result:</string>
    <string name="base">Base:</string>
    <string name="number">Number:</string>
    <string name="start_dec_to_base">Start Dec to Base</string>
    <string name="start_base_to_dec">Start Base to Dec</string>
    <string name="exit">Exit</string>
    <string name="decimal">Decimal:</string>
    <string name="convert_decimal_to_base">Convert a decimal to any base</string>

</resources>
