<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="nl.joaofilipesabinoesperancinha.basicunitconverter.UniversityBaseBaseToDecActivity$PlaceholderFragment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:minHeight="80dp"
                android:gravity="center_vertical|center_horizontal">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/convert_type_decimal"
                    android:id="@+id/textView"
                    android:gravity="center_vertical|center_horizontal"
                    android:background="@drawable/text_style"
                    android:layout_span="2" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:minHeight="60dp"
                android:gravity="center_vertical|center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/number"
                    android:id="@+id/textView"
                    android:gravity="center_vertical|right" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ems="10"
                    android:id="@+id/editNumber"
                    android:background="@drawable/edit_style"
                    android:gravity="center_vertical|center_horizontal" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:minHeight="60dp"
                android:gravity="center_vertical|center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/base"
                    android:id="@+id/textView2"
                    android:gravity="right" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/editBaseNumber"
                    android:gravity="center_vertical|center_horizontal"
                    android:background="@drawable/edit_style" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:minHeight="60dp"
                android:gravity="center_vertical|center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/result"
                    android:id="@+id/textViewResultDecimal"
                    android:gravity="center_vertical|center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_style"
                    android:text="@string/value_appears_here"
                    android:id="@+id/textResultDec"
                    android:gravity="center_vertical|center_horizontal" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:minHeight="60dp"
                android:gravity="center_vertical|center_horizontal">


                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/convert"
                    android:id="@+id/btnConvertBaseToDecimal"
                    android:gravity="center_vertical|center_horizontal"
                    android:background="@drawable/btn_bkgrnd_def"
                    android:layout_span="2" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:minHeight="60dp"
                android:gravity="center_vertical|center_horizontal">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_menu"
                    android:id="@+id/btnMain2"
                    android:gravity="center_vertical|center_horizontal"
                    android:background="@drawable/btn_bkgrnd_def"
                    android:layout_span="2" />

            </TableRow>
        </TableLayout>

    </ScrollView>
</RelativeLayout>
